tests/pos/java-annot/J.java
import java.lang.annotation.*;

@Retention(RetentionPolicy.RUNTIME)
public @interface J {
    String value();
}
